--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container">
+            <p>2026 Antonio Califano - Servizio Ripetizioni.</p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
